After Completed White header

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style.css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css/layout.css">
     <title> GitLab </title>
 </head>
 <body>
@@ -26,13 +27,171 @@
         <div class="section-2">
             <div class="logo-left">
                 <img class="Fox" src="https://about.gitlab.com/nuxt-images/ico/favicon.ico?cache=20220414" alt="">
-                <p class="Why-GitLab"> Why GitLab </p>
-                <p class="Platform"> Platform" </p>
-                <p class="Solutions"> Solutions </p>
-                <p class="Pricing"> Pricing </p>
-                <p class="Resources"> Resources </p>
-                <p class="Company"> Company </p>
-                <p class="Contact-us"> Contact us </p>
+                <p id="Why-GitLab" class="Logo-text"> Why GitLab </p>
+                <p id="Platform" class="Logo-text" > Platform" </p>
+                <div class="Solutions-div">
+                    <p id="Solutions" class="Logo-text" > Solutions </p>
+                    <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496"/></svg>
+                        <div class="Solutions-hover">
+                            <div class="Solutions-menu">
+                            <div class="S-menu">
+                            <nav class="Solutions-hover-1 child"> 
+                                <ul class="menu-1">
+                                    <li class="child-1"> <a href=""> Our solutions </a> </li>
+                                    <li class="child-2"> <a href=""> GitLab Duo (AI) </a> </li>
+                                    <li class="child-3"> <a href=""> Security & Compliance </a> </li>
+                                    <li class="child-4"> <a href=""> Continuous integration & delivery </a> </li>
+                                    <li class="child-5"> <a href=""> Automated software delivery </a> </li>
+                                    <li class="child-6"> <a href=""> Value stream management </a> </li>
+                                    <li class="child-7"> <a href=""> Agile Delivery </a> </li>
+                                    <li class="child-8"> <a href=""> Source code management </a> </li>
+                                    <li class="child-9"> <a href=""> GitOps </a> </li>
+                                </ul>
+                            </nav>
+                        <div class="View-All child">
+                            View all solutions
+                            <svg class="right-arrow-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M338.752 104.704a64 64 0 0 0 0 90.496l316.8 316.8l-316.8 316.8a64 64 0 0 0 90.496 90.496l362.048-362.048a64 64 0 0 0 0-90.496L429.248 104.704a64 64 0 0 0-90.496 0"/></svg>
+                        </div>
+                        <nav class="Solutions-hover-2 child"> 
+                            <ul class="menu-2">
+                                <li class="child-1"> <a href=""> By company size </a> </li>
+                                <li class="child-2"> <a href=""> Enterprise </a> </li>
+                                <li class="child-3"> <a href=""> Small business </a> </li>
+                                <li class="child-4"> <a href=""> Startups </a> </li>
+                                <li class="child-5"> <a href=""> Nonprofits </a> </li>
+                            </ul>
+                    </nav>
+                    <nav class="Solutions-hover-3 child"> 
+                        <ul class="menu-3">
+                            <li class="child-1"> <a href=""> By industry </a> </li>
+                            <li class="child-2"> <a href=""> Financial services </a> </li>
+                            <li class="child-3"> <a href=""> Public sector </a> </li>
+                            <li class="child-4"> <a href=""> Education </a> </li>
+                        </ul>
+                    </nav>
+                            </div>
+                            <div class="Side-Bar">
+                            <div class="Side-Bar-1">
+                                <svg fill="none" height="34" viewBox="0 0 34 34" width="34" xmlns="http://www.w3.org/2000/svg"><g stroke="#171321" stroke-miterlimit="10"><path d="m32.9999 23.8085h-17.3617v9.1915h17.3617z"></path><path d="m30.6171 23.6587v-2.2332h-17.3617v9.1915h2.383"></path><path d="m8.82983 18.0213 6.80847-2.383v-11.23404"></path><path d="m24.149 31.2979c1.5981 0 2.8936-1.2955 2.8936-2.8936s-1.2955-2.8937-2.8936-2.8937-2.8936 1.2956-2.8936 2.8937 1.2955 2.8936 2.8936 2.8936z"></path><path d="m30.2596 19.0426c.2315-1.0417.3574-2.1243.3574-3.2341 0-8.17701-6.6315-14.8085-14.8085-14.8085-8.17701 0-14.8085 6.63149-14.8085 14.8085 0 6.4477 4.12255 11.9285 9.8723 13.9643"></path></g></svg>
+                                <div class="Side-Bar-text-1">
+                                    <ul>
+                                        <li><a href="" class="text-child-1"> Try our ROI Calculator </a></li>
+                                        <li><a href="" class="text-child-2"> How much is your toolchain costing you? </a></li>
+                                    </ul>
+                                    <div class="Learn-More Side-Bar-logo-1">
+                                        Learn more
+                                        <svg class="right-arrow-3" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M338.752 104.704a64 64 0 0 0 0 90.496l316.8 316.8l-316.8 316.8a64 64 0 0 0 90.496 90.496l362.048-362.048a64 64 0 0 0 0-90.496L429.248 104.704a64 64 0 0 0-90.496 0"/></svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="Side-Bar-2">
+                                <svg fill="none" height="28" viewBox="0 0 34 28" width="34" xmlns="http://www.w3.org/2000/svg"><g stroke="#171321" stroke-miterlimit="10"><path d="m23.8084 1h-13.617v20.0851h9.5319c2.2562 0 4.0851-1.829 4.0851-4.0851z"></path><path d="m14.617 22.7872c0 2.2562-1.8289 4.0851-4.0851 4.0851h-9.5319v-20.08507h9.1915"></path><path d="m26.6409 6.78723h6.3592v15.99997c0 2.2562-1.829 4.0851-4.0851 4.0851h-9.5319v-5.7872"></path><path d="m13.9363 8.14894 3.0638-4.76596 3.0638 4.76596z"></path><path d="m10.1914 11.5021c-.56166-.6944-1.41954-1.1404-2.38294-1.1404-1.69192 0-3.06383 1.3719-3.06383 3.0638s1.37191 3.0639 3.06383 3.0639c.9634 0 1.82128-.4426 2.38294-1.1371"></path><path d="m23.8086 12.5098 2.2128-2.2128 3.1285 3.1285-3.1285 3.1285-2.2128-2.2127"></path><path d="m22.7874 19.7234h6.8085"></path><path d="m22.1064 22.1064h7.4894"></path><path d="m13.2554 11.8936h7.4893"></path><path d="m13.2554 14.2766h7.4893"></path><path d="m13.2554 16.6596h7.4893"></path><path d="m4.06372 19.383h6.12768"></path></g></svg>
+                                <div class="Side-Bar-text-2">
+                                    <ul>
+                                        <li><a href="" class="text-child-1"> Pricing plans </a></li>
+                                        <li><a href="" class="text-child-2"> Find out which plan is best for your team. </a></li>
+                                    </ul>
+                                    <div class="GitLab-Ultimate Side-Bar-logo-2">
+                                        GitLab Ultimate
+                                        <svg class="right-arrow-3" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M338.752 104.704a64 64 0 0 0 0 90.496l316.8 316.8l-316.8 316.8a64 64 0 0 0 90.496 90.496l362.048-362.048a64 64 0 0 0 0-90.496L429.248 104.704a64 64 0 0 0-90.496 0"/></svg>
+                                    </div>
+                                    <div class="GitLab-Premium Side-Bar-logo-2">
+                                        GitLab Premium
+                                        <svg class="right-arrow-3" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M338.752 104.704a64 64 0 0 0 0 90.496l316.8 316.8l-316.8 316.8a64 64 0 0 0 90.496 90.496l362.048-362.048a64 64 0 0 0 0-90.496L429.248 104.704a64 64 0 0 0-90.496 0"/></svg>
+                                    </div>
+                                </div>
+                        </div>
+                        </div> 
+                        </div>
+                        </div>
+                </div>
+
+                <p id="Pricing" class="Logo-text"> Pricing </p>
+                <div class="Resources-div">
+                    <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496"/></svg>
+                    <p id="Resources" class="Logo-text"> Resources </p>
+                        <div class="Resources-hover">
+                            <div class="Resources-menu">
+                                <div class="R-menu">
+                                <nav class="Resources-hover-1 child-0"> 
+                                    <ul class="menu-1">
+                                        <li class="child-1"> <a href=""> Getting started </a> </li>
+                                        <li class="child-2"> <a href=""> Install </a> </li>
+                                        <li class="child-3"> <a href=""> Quick start guides </a> </li>
+                                        <li class="child-4"> <a href=""> Learn </a> </li>
+                                        <li class="child-5"> <a href=""> Product documentation </a> </li>
+                                        <li class="child-6"> <a href=""> Best practice videos </a> </li>
+                                        <li class="child-7"> <a href=""> Integrations </a> </li>
+                                    </ul>
+                                </nav>
+                            <div class="View-All-1 child-0">
+                                View all resources
+                                <svg class="right-arrow-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M338.752 104.704a64 64 0 0 0 0 90.496l316.8 316.8l-316.8 316.8a64 64 0 0 0 90.496 90.496l362.048-362.048a64 64 0 0 0 0-90.496L429.248 104.704a64 64 0 0 0-90.496 0"/></svg>
+                            </div>
+                            <nav class="Resources-hover-2 child-0"> 
+                                <ul class="menu-2">
+                                    <li class="child-1"> <a href=""> Discover </a> </li>
+                                    <li class="child-2"> <a href=""> Customer success stories </a> </li>
+                                    <li class="child-3"> <a href=""> Blog </a> </li>
+                                    <li class="child-4"> <a href=""> Remote </a> </li>
+                                    <li class="child-5"> <a href=""> TeamOps </a> </li>
+                                    <li class="child-6"> <a href=""> DevSecOps </a> </li>
+                                </ul>
+                        </nav>
+                        <nav class="Resources-hover-3 child-0"> 
+                            <ul class="menu-3">
+                                <li class="child-1"> <a href=""> Connect </a> </li>
+                                <li class="child-2"> <a href=""> Community </a> </li>
+                                <li class="child-3"> <a href=""> Forum </a> </li>
+                                <li class="child-4"> <a href=""> Events </a> </li>
+                                <li class="child-5"> <a href=""> Partners </a> </li>
+                            </ul>
+                        </nav>
+                                </div>
+                                <div class="Side-Bar-3-0">
+                                <div class="Side-Bar-3">
+                                    <div class="Side-Bar-text-3">
+                                        <p>  DevSecOps Maturity  </p>
+                                        <img class="Resources-img" src="https://images.ctfassets.net/g1m12f5de7m9/1qoSN0lZCxzMBzl7vCdiuA/dd18de9187a31271225d4cc80e8b1ec1/hero-image.png" alt="">
+                                        <p>  Find out how your organization is scored on DevSecOps maturity  </p>
+                                        <div class="Take-The-Assessment">
+                                            Take the assessment
+                                            <svg class="right-arrow-4" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.159 10.72a.75.75 0 101.06 1.06l3.25-3.25L15 8l-.53-.53-3.25-3.25a.75.75 0 00-1.061 1.06l1.97 1.97H1.75a.75.75 0 100 1.5h10.379l-1.97 1.97z"></path></svg>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div> 
+                            </div>
+                        </div>
+                </div>
+                <div class="Company-div">
+                    <p id="Company" class="Logo-text" > Company </p>
+                    <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496"/></svg>
+                        <nav class="Company-hover"> 
+                                <ul class="menu">
+                                    <li class="child-1"> <a href=""> About </a> </li>
+                                    <li class="child-2"> <a href=""> Jobs </a> </li>
+                                    <li class="child-3"> <a href="">Events</a> </li>
+                                    <li class="child-4"> <a href="">Leadership</a> </li>
+                                    <li class="child-5"> <a href="">Team</a> </li>
+                                    <li class="child-6"> <a href="">Handbook</a> </li>
+                                    <li class="child-7"> <a href="">Investor relations</a> </li>
+                                    <li class="child-8"> <a href="">Trust center</a> </li>
+                                    <li class="child-9"> <a href="">Newsletter</a> </li>
+                                    <li class="child-10"> <a href="">Press</a> </li>
+                                </ul>
+                        </nav>
+                </div>
+                <div class="Contact-us-div">
+                    <p id="Contact-us" class="Logo-text" > Contact us </p>
+                    <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 1024 1024"><path fill="currentColor" d="M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496"/></svg>
+                    <nav class="Contact-us-hover"> 
+                        <ul class="menu">
+                            <li class="child-1"><a href=""> Get help </a></li>
+                            <li class="child-2"><a href=""> Customer portal </a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <div class="logo-right">
                 <svg class="KinhLup" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16"><path fill="currentColor" fill-rule="evenodd" d="M11.5 7a4.5 4.5 0 1 1-9 0a4.5 4.5 0 0 1 9 0m-.82 4.74a6 6 0 1 1 1.06-1.06l2.79 2.79a.75.75 0 1 1-1.06 1.06z" clip-rule="evenodd"/></svg>
@@ -40,7 +199,8 @@
                 <p class="Sign-in"> Sign in </p>
             </div>
         </div>
+        <div class="body-1">
+        </div>
     </div>
-
 </body>
 </html>
