--- a/index.html/index.html
+++ b/index.html/index.html
@@ -199,7 +199,52 @@
                 <p class="Sign-in"> Sign in </p>
             </div>
         </div>
+        <div class="body-0">
+        </div>
         <div class="body-1">
+        </div>
+        <div class="body-2">
+            <div class="body-2-div">
+            <p> Trusted By: </p>
+            <div >
+                <img id="body-2-logo-1" src="https://images.ctfassets.net/xz1dnu24egyd/jBj2VNsmT60j2BE3XSGeb/e66c96817462208a24f72efdaf3a68ad/logo_tmobile_mono.svg" alt="lỗi">
+            </div>
+            <div>
+                <img id="body-2-logo-2" src="https://images.ctfassets.net/xz1dnu24egyd/12sevPjM5gvLhceJRywIKq/36887bd972b75c0c43652532d7054aea/goldman-sachs.svg" alt="lỗi">
+            </div>
+            <div >
+                <img id="body-2-logo-3" src="https://images.ctfassets.net/xz1dnu24egyd/4vL1UXPcQZiZgxgiPGUcGa/04689a44185ba7bb90e5d365addd983c/arbus.png" alt="lỗi">
+            </div>
+            <div >
+                <img id="body-2-logo-4" src="https://images.ctfassets.net/xz1dnu24egyd/12ToPh9IhYXT8DtFZeeWFB/6a5bc582529622f181e69ead7b34c9e6/lockheed-martin.png" alt="lỗi">
+            </div>
+            <div >
+                <img id="body-2-logo-5" src="https://images.ctfassets.net/xz1dnu24egyd/1MDlrMOt06i5zQ0oRCYAWh/46b70f0979a4898e76ea0cae7e188dce/carfax-logo.png" alt="lỗi">
+            </div>
+            <div >
+                <img id="body-2-logo-6" src="https://images.ctfassets.net/xz1dnu24egyd/SC2F82vImYN0O7aITjA22/661c231be70e7dce8b17274ab9068f99/logo_nvidia_mono.svg" alt="lỗi">
+            </div>
+            <div >
+                <img id="body-2-logo-7" src="https://images.ctfassets.net/xz1dnu24egyd/2n7QcbQlYLwERy3ItMgsrP/f5ab9507d15c11d97e3283d757702da8/ubs.svg" alt="lỗi">
+            </div>
+            </div>
+        </div>
+        <div class="body-3">
+            <div class="body-3-div">
+                <div class="body-3-text">
+                    <h3> Balance speed and security in a single platform </h3>
+                    <p> Automate software delivery, boost productivity, and secure your end-to-end software supply chain. </p>
+                    <div class="body-3-form">
+                        <button> Discover the platform </button>
+                        <div class="body-3-link">
+                        <a href=""> What is Gitlab? </a>
+                        <svg id="body-3-logo" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z" style="fill:none;stroke:currentColor;stroke-miterlimit:10;stroke-width:32px"></path><path fill="currentColor" d="M216.32,334.44,330.77,265.3a10.89,10.89,0,0,0,0-18.6L216.32,177.56A10.78,10.78,0,0,0,200,186.87V325.13A10.78,10.78,0,0,0,216.32,334.44Z"></path></svg>
+                        </div>
+                </div>
+                <div class="body-3-img">
+                    <img src="https://images.ctfassets.net/xz1dnu24egyd/5T4fBtZPK48WS8IMUrCJaa/6fd47f98c454bfdf3cc1ddadf769ee17/developer-productivity-img.svg" alt="lỗi">
+                </div>
+            </div>
         </div>
     </div>
 </body>
