After finished 1/2 body

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -246,6 +246,55 @@
                 </div>
             </div>
         </div>
+        </div>
+        <div class="body-4">
+            <div class="body-4-div">
+                <div class="body-4-child body-4-child-1">
+                    <svg class="body-4-logo-1" viewBox="0 0 32 32" fill="currentColor" fill-opacity="0" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_1145_6758)" stroke="currentColor" stroke-width="1.28" stroke-linecap="round" stroke-linejoin="round"><path d="M14.928 12.872l-4.182-4.16a3.622 3.622 0 10-.115 5.165l.96-.96m5.986-5.98l.893-.96a7.513 7.513 0 115.369 12.77"></path><path d="M20.335 9.576l.912-.87a3.622 3.622 0 11.103 5.151l-7.823-7.88a7.515 7.515 0 10-5.372 12.769"></path><path d="M15.997 28.28c-3.052-.93-5.65-3.596-5.65-7.07v-4.892a4.863 4.863 0 005.65-1.744v0a4.863 4.863 0 005.65 1.744v4.892c0 3.474-2.598 6.14-5.65 7.07"></path><path d="M17.3 21.606v-1.033a1.283 1.283 0 00-1.283-1.299v0a1.285 1.285 0 00-1.282 1.299v1.033"></path><path d="M17.758 21.6h-3.513v2.478h3.513V21.6z"></path></g><defs><clipPath id="clip0_1145_6758"><path fill="#fff" d="M0 0h31.995v31.995H0z"></path></clipPath></defs></svg>
+                    <div class="body-4-text body-4-text-1">
+                        <h3> Simplify your toolchain </h3>
+                        <div class="body-4-text-div body-4-text-1-div">
+                        <p> All the 
+                        <a href="">  essential DevSecOps tools </a>
+                         in one place. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="body-4-child body-4-child-2">
+                    <svg class="body-4-logo-2" width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg"> <g clip-path="url(#clip0_7608_14882)"> <path d="M13.0763 7.05223C14.4881 6.58734 15.984 6.43452 17.4607 6.60434C18.9373 6.77415 20.3595 7.26255 21.6289 8.03579C22.8983 8.80902 23.9847 9.84864 24.813 11.0828C25.6413 12.317 26.1917 13.7163 26.4263 15.1841C26.6609 16.6518 26.574 18.153 26.1716 19.5838C25.7692 21.0147 25.061 22.3412 24.0958 23.4715C23.1306 24.6019 21.9316 25.5092 20.5814 26.1308C19.2313 26.7524 17.7622 27.0734 16.2759 27.0717H5.24707" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M29.9684 27.0717H25.3657" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M8.66149 23.6802C7.7388 22.6592 7.03084 21.4631 6.5797 20.163C6.12855 18.863 5.94345 17.4854 6.03538 16.1124C6.12732 14.7393 6.49442 13.3988 7.11485 12.1705C7.73528 10.9421 8.59638 9.85112 9.64694 8.96228" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M4.595 25.0975H0.639771V29.0528H4.595V25.0975Z" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M29.0454 29.4795L31.3596 27.1685L29.0454 24.8544" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M14.1259 4.51489L12.3727 7.27458L15.1324 9.02783" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M19.3705 14.8398L14.9488 19.2616L13.1346 17.4475" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> </g> <defs> <clipPath id="clip0_7608_14882"> <rect width="31.9954" height="31.9954" fill="none" transform="translate(0 0.995361)"></rect> </clipPath> </defs> </svg>
+                    <div class="body-4-text body-4-text-2">
+                        <h3> Accelerate software delivery </h3>
+                        <div class="body-4-text-div body-4-text-2-div">
+                        <p> Automation, 
+                        <a href=""> AI-powered workflows </a>
+                        , and more. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="body-4-child body-4-child-3">
+                    <svg class="body-4-logo-3" width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg"> <g clip-path="url(#clip0_7608_15007)"> <path d="M4.2604 6.23632C4.54516 15.0926 3.44772 18.5801 5.7066 23.2771C7.30636 26.6014 12.7456 30.7192 16.9914 32.2358" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M6.3398 6.35791C8.35158 6.32244 10.3347 5.87484 12.1667 5.04277C13.9987 4.21069 15.6406 3.01182 16.9911 1.5202C18.5771 3.27255 20.5626 4.61629 22.779 5.43732C24.9954 6.25836 27.3771 6.53245 29.722 6.23632C29.4373 15.0926 30.5347 18.5801 28.2758 23.2771C26.6761 26.6014 21.2369 30.7192 16.9911 32.2358" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> <path d="M22.753 13.7904L21.3004 12.3378C21.2204 12.2571 21.1252 12.1931 21.0203 12.1494C20.9154 12.1057 20.8029 12.0832 20.6893 12.0832C20.5756 12.0832 20.4631 12.1057 20.3583 12.1494C20.2534 12.1931 20.1582 12.2571 20.0782 12.3378L15.6212 16.782L13.9254 15.083C13.763 14.9216 13.5433 14.831 13.3143 14.831C13.0854 14.831 12.8657 14.9216 12.7032 15.083L11.2506 16.5388C11.0894 16.7007 10.9989 16.9198 10.9989 17.1483C10.9989 17.3768 11.0894 17.5959 11.2506 17.7578L14.6421 21.1493C14.7705 21.2777 14.9229 21.3795 15.0906 21.449C15.2583 21.5185 15.4381 21.5543 15.6196 21.5543C15.8011 21.5543 15.9809 21.5185 16.1486 21.449C16.3163 21.3795 16.4687 21.2777 16.5971 21.1493L22.753 15.0094C22.8336 14.9297 22.8975 14.8348 22.9412 14.7301C22.9848 14.6255 23.0073 14.5133 23.0073 14.3999C23.0073 14.2865 22.9848 14.1743 22.9412 14.0697C22.8975 13.9651 22.8336 13.8701 22.753 13.7904V13.7904Z" stroke="currentColor" stroke-width="1.27982" stroke-linecap="round" stroke-linejoin="round" fill="none"></path> </g> <defs> <clipPath id="clip0_7608_15007"> <rect width="31.9954" height="31.9954" fill="none" transform="translate(0.995361 0.880249)"></rect> </clipPath> </defs> </svg>
+                    <div class="body-4-text body-4-text-3">
+                        <h3> Integrate security </h3>
+                        <div class="body-4-text-div body-4-text-3-div">
+                        <p> Security that’s 
+                        <a href=""> built in, not bolted on </a>
+                         . </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="body-4-child body-4-child-4">
+                    <svg class="body-4-logo-4" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_1386_12925)" fill="currentColor"><path d="M16 27.098a.64.64 0 01-.378-.125l-4.69-3.46a1.02 1.02 0 01-.372-1.113l1.6-5.05a.842.842 0 01.79-.576.826.826 0 01.81.557l.931 2.912h2.63l.919-2.909a.826.826 0 01.78-.576.822.822 0 01.785.57L21.44 22.4a1.021 1.021 0 01-.365 1.13l-4.694 3.44a.62.62 0 01-.381.128zm-4.16-4.503L16 25.661l4.16-3.066-1.123-3.52-.64 2a.64.64 0 01-.608.445h-3.571a.64.64 0 01-.608-.445l-.64-2.003-1.13 3.523z"></path><path d="M26.096 23.334h-2.31a.64.64 0 110-1.28h2.31a4.62 4.62 0 004.74-4.616 4.618 4.618 0 00-4.74-4.616 4.694 4.694 0 00-1.037.122.64.64 0 01-.777-.704 6.867 6.867 0 00-13.29-3.155.64.64 0 01-.835.384 6.515 6.515 0 10-2.362 12.585h.845a.64.64 0 110 1.28h-.845a7.795 7.795 0 010-15.59 7.68 7.68 0 012.24.32 8.144 8.144 0 0115.584 3.29v.21c.163 0 .32-.022.48-.022a5.897 5.897 0 110 11.792h-.003z"></path></g><defs><clipPath id="clip0_1386_12925"><path fill="#fff" d="M0 0h32v32H0z"></path></clipPath></defs></svg>
+                    <div class="body-4-text body-4-text-4">
+                        <h3> Deploy anywhere </h3>
+                        <div class="body-4-text-div body-4-text-4-div">
+                        <p> Say goodbye to cloud 
+                        <a href=""> vendor lock-in </a>
+                        . </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
